Stuck join/login link over top of comment box on preview page. Fixed modal to not auto-fill info from a user whose page you're looking at.

--- a/public/stylesheets/sass/stories/preview.sass
+++ b/public/stylesheets/sass/stories/preview.sass
@@ -333,6 +333,14 @@
 				float: left
 				height: 55px
 				margin-top: 40px
+			#non-logged-user-tries-to-comment
+				position: absolute
+				z-index: 2
+				top: 0
+				left: 0
+				display: block
+				width: 100%
+				height: 100px
 		ul.list
 			margin-top: 20px
 			li
