--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2432,6 +2432,14 @@ form.new_story, form.edit_story, .story-form {
         float: left;
         height: 55px;
         margin-top: 40px; }
+      .story-preview .curations .writer #non-logged-user-tries-to-comment {
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100px; }
     .story-preview .curations ul.list {
       margin-top: 20px; }
       .story-preview .curations ul.list li {
